Fix description in wrong place

--- a/definitions/number-insight.yml
+++ b/definitions/number-insight.yml
@@ -83,8 +83,8 @@ paths:
             post:
               operationId: asyncCallback
               summary: Asynchronous response
+              description: The resonse made back to your callback URL
               requestBody:
-                description: Async response payload
                 content:
                   application/json:
                     schema:
