--- a/definitions/number-insight.yml
+++ b/definitions/number-insight.yml
@@ -73,10 +73,10 @@ paths:
           content:
             'application/json':
               schema:
-                $ref: '#/components/schemas/niResponseJson'
+                $ref: '#/components/schemas/niResponseAsync'
             'text/xml':
               schema:
-                $ref: '#/components/schemas/niResponseXml'
+                $ref: '#/components/schemas/niResponseAsync'
       callbacks:
         onData:
           '{$request.query.callback}':
@@ -159,6 +159,36 @@ components:
         type: string
         format: uriref
   schemas:
+    niResponseAsync:
+      type: object
+      xml:
+        name: lookup
+      properties:
+        request_id:
+          type: string
+          description: 'The unique identifier for your request. This is a alphanumeric string up to 40 characters.'
+          example: 'aaaaaaaa-bbbb-cccc-dddd-0123456789ab'
+          maxLength: 40
+          xml:
+            name: requestId
+        number:
+          type: string
+          description: "The `number` in your request"
+          example: '447700900000'
+        remaining_balance:
+          type: string
+          description: 'Your account balance in EUR after this request. Not returned with Number Insight Advanced Async API.'
+          example: '1.23456789'
+          xml:
+            name: remainingBalance
+        request_price:
+          type: number
+          description: 'If there is an internal lookup error, the `refund_price` will reflect the lookup price. If `cnam` is requested for a non-US number the `refund_price` will reflect the `cnam` price. If both of these conditions occur, `refund_price` is the sum of the lookup price and `cnam` price.'
+          example: '0.01500000'
+          xml:
+            name: requestPrice
+        status:
+          $ref: '#/components/schemas/niStatus'
     niResponseXml:
       type: object
       description: 'The root object of the XML response varies based on the detail level requested.'
