--- a/definitions/number-insight.yml
+++ b/definitions/number-insight.yml
@@ -36,6 +36,7 @@ paths:
     get:
       operationId: getNumberInsight
       summary: Synchronously get information about a phone number
+      x-group: number-insight
       tags:
         - Request
       parameters:
@@ -59,6 +60,7 @@ paths:
     get:
       operationId: getNumberInsightAsync
       summary: Asynchronously get information about a phone number
+      x-group: number-insight
       tags:
         - Request
       parameters:
@@ -979,3 +981,10 @@ components:
       name: api_secret
       in: query
       description: 'You can find your API secret in your [account overview](https://dashboard.nexmo.com/account-overview)'
+x-groups:
+  number-insight:
+    name: Number Insight
+    description: The Number Insight object contains information about the request and details of the phone number information has been requested about.
+    order: 1
+    schema:
+      $ref: '#/components/schemas/niResponseJsonAdvanced'
