--- a/definitions/reporting.yml
+++ b/definitions/reporting.yml
@@ -64,6 +64,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NewReportResp'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '500':
+          description: Server error
   "/v1/reports/{report_id}":
     get:
       summary: Get status of report
