--- a/definitions/reporting.yml
+++ b/definitions/reporting.yml
@@ -140,6 +140,14 @@ paths:
             type: string
             minLength: 16
             maxLength: 16
+        - name: sig
+          description: The hash of the request parameters in alphabetical order, a timestamp and the signature secret. See [Signing Requests](/concepts/guides/signing-messages) for more details.
+          required: false
+          in: query
+          schema:
+            type: string
+            minLength: 16
+            maxLength: 16
         - name: file_id
           in: path
           schema:
