--- a/definitions/reporting.yml
+++ b/definitions/reporting.yml
@@ -132,7 +132,7 @@ paths:
             minLength: 8
             maxLength: 8
         - name: api_secret
-          description: Your API secret. Required unless `sig` is provided
+          description: Your API secret. Required unless `sig` is provided.
           required: false
           in: query
           example: abcdef0123456789
@@ -153,7 +153,7 @@ paths:
           schema:
             type: string
             example: aaaaaaaa-bbbb-cccc-dddd-0123456789ab
-          description: UUID of the file
+          description: UUID of the file.
           required: true
       responses:
         '200':
