--- a/definitions/reporting.yml
+++ b/definitions/reporting.yml
@@ -168,6 +168,7 @@ components:
   schemas:
     NewReportReq:
       properties:
+        type: object
         product:
           type: string
           example: SMS
@@ -194,11 +195,13 @@ components:
           type: string
           description: The account ID you wish to search for (especially useful for searching for subaccounts),
         include_subaccounts:
-          type: string
+          type: boolean
           description: Whether to include subaccounts. Defaults to false.
           enum:
             - true
             - false
+          default: false
+          example: false
         callback_url:
           type: string
           description: URL to send a callback to upon completion of the report creation.
@@ -207,19 +210,23 @@ components:
         start_date:
           type: string
           format: date
-          description: "ISO 8601 formatted date for when reports should begin."
-          example: "2017-07-01T00:00:00+0000"
+          description: "ISO 8601 formatted date for when reports should begin. If unspecified, defaults to seven days ago."
+          example: "2017-12-24:00:00+0000"
         end_date:
           type: string
           format: date
-          description: "ISO 8601 formatted date for when report should end."
+          description: "ISO 8601 formatted date for when report should end. If unspecified, defaults to the current time."
           example: "2017-12-31T23:59:59+0000"
         client_ref:
           type: string
-          description: For MT SMS reports - search only for messages with this client_ref.
+          description: For MT SMS reports - search only for messages with this `client_ref`.
+          maxLength: 40
+          minLength: 40
         account_ref:
           type: string
-          description: For MT SMS reports - search only for messages with this account_ref.
+          description: For MT SMS reports - search only for messages with this `account_ref`.
+          maxLength: 40
+          minLength: 40
         to:
           type: string
           description: "For SMS, Voice and Verify reports - search only for interactions with this number."
@@ -238,13 +245,16 @@ components:
       required:
         - product
     NewReportResp:
+      type: object
       properties:
         request_id:
           type: string
           description: UUID for the request.
+          example: aaaaaaaa-bbbb-cccc-dddd-0123456789ab
         status:
           type: string
           description: The current status of the request.
+          example: PENDING
           enum:
             - PENDING
             - PROCESSING
