--- a/definitions/reporting.yml
+++ b/definitions/reporting.yml
@@ -316,7 +316,7 @@ components:
           description: Account ID for the report.
           example: abcdef01
         include_subaccounts:
-          type: string
+          type: boolean
           description: Whether to include subaccounts. Defaults to false.
           enum:
             - true
