--- a/definitions/audit.yml
+++ b/definitions/audit.yml
@@ -22,7 +22,9 @@ paths:
   '/beta/audit/events':
     get:
       summary: Retrieve audit events
-      description:
+      description: >
+        Get a series of audit log events describing changes made to your
+        Nexmo account over time.
       parameters:
         - name: api_key
           description: Your API key
@@ -44,3 +46,105 @@ paths:
             maxLength: 16
           # TODO: confirm whether sig works in PROD. if it does, add in sig
           # and remove required: true on api_secret
+        - name: event_type
+          description: Filter results by this event type.
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/EventTypes'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuditResp'
+
+
+components:
+  schemas:
+    EventTypes:
+      type: string
+      enum:
+        - APP_CREATE
+        - NUMBER_ASSIGN
+        - NUMBER_LINKED
+        - NUMBER_UNLINKED
+        - NUMBER_UPDATED
+      example: APP_CREATE
+    AuditResp:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            events:
+              type: array
+              items:
+                $ref: '#/components/schemas/AuditEvent'
+    AuditEvent:
+      type: object
+      properties:
+        id:
+          type: string
+          description: "UUID of the event"
+          example: "aaaaaaaa-bbbb-cccc-dddd-0123456789ab"
+        event_type:
+          $ref: '#/components/schemas/EventTypes'
+        event_type_description:
+          type: string
+          description: "A description of the event type"
+          example: "Application created"
+        created_at:
+          type: string
+          format: date
+        user_email:
+          type: string
+          format: email
+          example: user@example.org
+        user_id:
+          type: integer
+          example: 123456
+        account_id:
+          type: string
+          example: "abcdef01"
+        source:
+          type: string
+          description: >
+            The source of the event.
+
+            CD: Customer Dashboard
+            DEVAPI: via Developer API
+          enum:
+            - CD
+            - DEVAPI
+          example: CD
+        source_ip:
+          type: string
+          format: ipv4
+          description: The IP address used to make the account change.
+          example: "192.0.2.0"
+        source_description:
+          type: string
+          format: A human readable description of the `source`.
+          enum:
+            - Customer dashboard
+            - Developer API
+          example: Customer dashboard
+        source_country:
+          type: string
+          description: ISO country code recorded for the event.
+          example: GB
+        _links:
+          $ref: '#/components/schemas/EventSelfLinkObject'
+    EventSelfLinkObject:
+      type: object
+      properties:
+        self:
+          type: object
+          properties:
+            href:
+              type: string
+              format: uri
+              description: URI of this document.
+              example: "https://api.nexmo.com/beta/audit/events/aaaaaaaa-bbbb-cccc-dddd-0123456789ab"
