adding individual audit event GET

--- a/definitions/audit.yml
+++ b/definitions/audit.yml
@@ -59,6 +59,62 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuditResp'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorUnauthorized'
+  '/beta/audit/events/{id}':
+    get:
+      summary: Retrieve individual audit event
+      description: >
+        Get a series of audit log events describing changes made to your
+        Nexmo account over time.
+      parameters:
+        - name: api_key
+          description: Your API key
+          required: true
+          in: query
+          example: abcd1234
+          schema:
+            type: string
+            minLength: 8
+            maxLength: 8
+        - name: api_secret
+          description: Your API secret.
+          required: true
+          in: query
+          example: abcdef0123456789
+          schema:
+            type: string
+            minLength: 16
+            maxLength: 16
+          # TODO: confirm whether sig works in PROD. if it does, add in sig
+          # and remove required: true on api_secret
+        - name: id
+          description: The UUID of the event
+          in: path
+          required: true
+          example: "aaaaaaaa-bbbb-cccc-dddd-0123456789ab"
+          schema:
+            type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuditEvent'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorUnauthorized'
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorIndividualNotFound'
 
 
 components:
